Sat Dec 20 18:28:26 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_find_1): supplements an extension for executable
	  files on DOSish platforms.

	* io.c (pipe_open): use rb_w32_aspawn() for array form.

	* win32/win32.c (rb_w32_pipe_exec): no longer used.

	* win32/win32.c (rb_w32_spawn, rb_w32_aspawn): deals with batch
	  files and commands with extensions.  [ruby-core:20695]

	* win32/win32.c (has_redirection): supports environment variables
	  references.

Fri Dec  5 01:37:02 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): ERROR_BROKEN_PIPE is not a real error
	  at this point.

	* io.c (pipe_open): use rb_w32_spawn() instead of rb_w32_pipe_exec()
	  to use our own redirection scheme.

Sat Dec 20 10:59:16 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/locale.rb (IRB::Locale#initialize)
	  initializes instance variables to suppress warnings.
	  typo fix to ignore LoadError: [ruby-dev:37508]

Fri Dec 19 17:01:35 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_extract_encoding_option): "internal_encoding: nil"
	  to specify no-transcoding.  and other corner case fixed.
	  [ruby-dev:37496]

	* hash.c (rb_hash_lookup2): new function to look-up hash with
	  default value.

Fri Dec 19 15:51:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options): get rid of warning on DOSISH.

Thu Dec 18 19:31:54 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/init.rb (IRB.opt_parse): (M17N) adds -U and -E as command
	  line options. [ruby-dev:37161]. Fixes #711. 
	  improved long optinos.

	* lib/irb/init.rb (IRB.set_encoding): new subroutine for IRB.opt_parse

	* lib/irb/input-method.rb (IRB::StdioInputMethod): (M17N) regards
	  scripts that user types as encoded in the external_encoding. 

	* lib/irb/input-method.rb (IRB::ReadlineInputMethod): ditto.

	* lib/irb/input-method.rb (IRB::FileInputMethod): (M17N) respects
	  magic comment.
